--- a/index.html
+++ b/index.html
@@ -3,25 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping-Website</title>
+    <title>Shopping Website</title>
+    <link rel="stylesheet" href="main_style.css">
 </head>
 <body>
-    <div class="header">
-        <a href="index.html" id="home">Home</a>
+    <header>
+        <div class="logo" id="name">
+            logo
+            <h5>
+                kuch hoga yaha abhi decided nhi kiya hai
+            </h5>
+        </div>
+        <nav class="navbar">
+            <ul>
+                <li></li>
+                <li><a>Contact</a></li>
+                <li><a>Gift Card</a></li>
+                <li><a>FAQ</a></li>
+                <li><a>About</a></li>
+                <li><a>Shop</a></li>
+                <li><a href="./account/sign_up.html">Sign In</a></li>
+            </ul>
+        </nav>
         <div class="search">
-            <input type="text" placeholder="Search" id="search-bar">
-            <button id="search-btn">Go</button>
+            <input type="text" id="searchinput" placeholder="Search....">
+            <button id="searchbutton">Search</button>
         </div>
-        <div class="account">
-            <a href="sign_in.html" id="sign-in">Log In</a>
-            <a href="sign_up.html" id="sign-up">Sign Up</a>
-            <a href="cart.html" id="cart">Cart</a>
-        </div>
-        <div class="tools">
-            <a href="latest_page.html" id="latest-uploads">Latest Uploads</a>
-            <a href="sell.html" id="sell">Sell</a>
-            <a href="customer_service.html" id="support">Need Help?</a>
-        </div>
-    </div>
+    </header>
 </body>
 </html>
