--- a/account/sign_in_up.html
+++ b/account/sign_in_up.html
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign In</title>
+    <script src="https://kit.fontawesome.com/668e2be118.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="sign_up">
+            <form action="something_here#">
+                <h1>Create Account</h1>
+                <div class="social_sign_up">
+                    <a href="###" class="social"><i class="fa-brands fa-google" style="color: #000000;"></i></a>
+                    <a href="###" class="social"><i class="fa-brands fa-facebook-f" style="color: #000000;"></i></a>
+                    <a href="###" class="social"><i class="fa-brands fa-linkedin-in" style="color: #000000;"></i></a>
+                </div>
+                <p>Or use your email for registration</p>
+                <div class="email_sign_up">
+                    <input type="text" name="txt" id="txt" placeholder="Username" required>
+                    <input type="email" name="email" id="email" placeholder="Email" required>
+                    <input type="password" name="pass" id="pass" placeholder="Password" required>
+                    <button id="sub-btn">Sign Up</button>
+                </div>
+            </form>
+        </div>
 
+        <div class="sign_in">
+            <form action="something_here#">
+                <h1>Sign In</h1>
+                <div class="social_sign_in">
+                    <a href="###" class="social"><i class="fa-brands fa-google" style="color: #000000;"></i></a>
+                    <a href="###" class="social"><i class="fa-brands fa-facebook-f" style="color: #000000;"></i></a>
+                    <a href="###" class="social"><i class="fa-brands fa-linkedin-in" style="color: #000000;"></i></a>
+                </div>
+                <p>Or use your email</p>
+                <div class="email_sign_in">
+                    <input type="email" name="email" id="email" placeholder="Email" required>
+                    <input type="password" name="pass" id="pass" placeholder="Password" required>
+                    <a href="###">Forgot Your Password?</a>
+                    <button id="sub-btn">Sign In</button>
+                </div>
+            </form>
+        </div>
+
+        <div class="overlay-container">
+            <div class="overlay-left">
+                <h1>Welcome Back!</h1>
+                <p>To stay connected with us please sign in by entering your details</p>
+                <button id="sign-in">Sign In</button>
+            </div>
+
+            <div class="overlay-right">
+                <h1>Hello Friend!</h1>
+                <p>Sign up by entering your details to start shopping</p>
+                <button id="sign-up">Sign Up</button>
+            </div>
+        </div>
+
+    </div>
+</body>
+</html>
