--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a>FAQ</a></li>
                 <li><a>About</a></li>
                 <li><a>Shop</a></li>
-                <li><a href="./account/sign_up.html">Sign In</a></li>
+                <li><a href="./account/sign_in_up.html">Sign In</a></li>
             </ul>
         </nav>
         <div class="search">
